@@ -3,5 +3,5 @@ glibc-branch := fedora
 glibc-base := HEAD
 DIST_BRANCH := devel
 COLLECTION := dist-fc4
-fedora-sync-date := 2006-08-15 05:33 UTC
-fedora-sync-tag := fedora-glibc-20060815T0533
+fedora-sync-date := 2006-08-15 20:33 UTC
+fedora-sync-tag := fedora-glibc-20060815T2033
